--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
         return query_string;
       }
-      document.getElementById('myParagraph').textContent = window.location.href;
+      document.getElementById('twit-url').textContent = window.location.href;
       var query = window.location.search.substring(1);
       var qs = parse_query_string(query);
       if (qs.redirect_url) {
